--- a/openssl-sys/Cargo.toml
+++ b/openssl-sys/Cargo.toml
@@ -8,24 +8,9 @@ description = "FFI bindings to OpenSSL"
 repository = "https://github.com/sfackler/rust-openssl"
 readme = "README.md"
 categories = ["cryptography", "external-ffi-bindings"]
-links = "openssl"
-build = "build/main.rs"
-
-[features]
-vendored = ['openssl-src']
 
 [dependencies]
 libc = "0.2"
 
 [build-dependencies]
-cc = "1.0"
-openssl-src = { version = "111.0.1", optional = true }
-pkg-config = "0.3.9"
-autocfg = "1.0"
-
-[target.'cfg(target_env = "msvc")'.build-dependencies]
-vcpkg = "0.2.8"
-
-# We don't actually use metadeps for annoying reasons but this is still here for tooling
-[package.metadata.pkg-config]
-openssl = "1.0.1"
+cmake = "0.1"
