--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,3 +58,92 @@ jobs:
           key: clippy-target-${{ runner.os }}-${{ steps.rust-version.outputs.version }}-${{ hashFiles('Cargo.lock') }}
       - name: Run clippy
         run: cargo clippy --all --all-targets
+  test:
+    name: Test
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        thing:
+        - stable
+        - macos-x86_64
+        - arm-android
+        - arm64-android
+        - i686-android
+        - x86_64-android
+        - i686-linux
+        - arm-linux
+        - aarch64-linux
+        - x86_64-musl
+        - x86_64-mingw
+        - i686-msvc
+        - x86_64-msvc
+        include:
+        - thing: stable
+          target: x86_64-unknown-linux-gnu
+          rust: stable
+          os: ubuntu-latest
+        - thing: macos-x86_64
+          target: x86_64-apple-darwin
+          rust: stable
+          os: macos-latest
+        - thing: arm-android
+          target: arm-linux-androideabi
+          rust: stable
+          os: ubuntu-latest
+        - thing: arm64-android
+          target: aarch64-linux-android
+          rust: stable
+          os: ubuntu-latest
+        - thing: i686-android
+          target: i686-linux-android
+          rust: stable
+          os: ubuntu-latest
+        - thing: x86_64-android
+          target: x86_64-linux-android
+          rust: stable
+          os: ubuntu-latest
+        - thing: i686-linux
+          target: i686-unknown-linux-gnu
+          rust: stable
+          os: ubuntu-latest
+        - thing: arm-linux
+          target: arm-unknown-linux-gnueabi
+          rust: stable
+          os: ubuntu-latest
+        - thing: aarch64-linux
+          target: aarch64-unknown-linux-gnu
+          rust: stable
+          os: ubuntu-latest
+        - thing: x86_64-musl
+          target: x86_64-unknown-linux-musl
+          rust: stable
+          os: ubuntu-latest
+        - thing: x86_64-mingw
+          target: x86_64-pc-windows-gnu
+          rust: stable
+          os: ubuntu-latest
+        - thing: i686-msvc
+          target: i686-pc-windows-msvc
+          rust: stable-i686-msvc
+          os: windows-latest
+        - thing: x86_64-msvc
+          target: x86_64-pc-windows-msvc
+          rust: stable-x86_64-msvc
+          os: windows-latest
+
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        submodules: 'recursive'
+    - name: Install Rust (rustup)
+      run: rustup update ${{ matrix.rust }} --no-self-update && rustup default ${{ matrix.rust }}
+      shell: bash
+    - run: rustup target add ${{ matrix.target }}
+    - name: Install nasm
+      if: startsWith(matrix.os, 'windows')
+      run: choco install nasm
+      shell: cmd
+    - run: cargo test
+      if: startsWith(matrix.os, 'windows')
+      name: Run tests (Windows)
+      shell: cmd
