--- a/systest/Cargo.toml
+++ b/systest/Cargo.toml
@@ -2,6 +2,7 @@
 name = "systest"
 version = "0.1.0"
 authors = ["Alex Crichton <alex@alexcrichton.com>"]
+publish = false
 
 [dependencies]
 libc = "0.2"
