--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,7 +143,10 @@ jobs:
       if: startsWith(matrix.os, 'windows')
       run: choco install nasm
       shell: cmd
-    - run: cargo test
-      if: startsWith(matrix.os, 'windows')
+    - if: startsWith(matrix.os, 'windows')
+      # CI's Windows doesn't have require root certs
+      run: cargo test --workspace --exclude tokio-boring --exclude hyper-boring
       name: Run tests (Windows)
-      shell: cmd
+    - if: "!startsWith(matrix.os, 'windows')"
+      run: cargo test
+      name: Run tests (not Windows)
