--- a/boring-sys/Cargo.toml
+++ b/boring-sys/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "boring-sys"
-version = "1.0.0"
+version = "1.0.1"
 authors = ["Alex Crichton <alex@alexcrichton.com>",
            "Steven Fackler <sfackler@gmail.com>",
            "Ivan Nikulin <ifaaan@gmail.com>"]
 license = "MIT"
 description = "FFI bindings to BoringSSL"
 repository = "https://github.com/inikulin/boring"
+documentation = "https://docs.rs/boring-sys"
 readme = "README.md"
 categories = ["cryptography", "external-ffi-bindings"]
 include = [
