--- a/boring/Cargo.toml
+++ b/boring/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "boring"
-version = "1.0.0"
+version = "1.0.1"
 authors = ["Steven Fackler <sfackler@gmail.com>", "Ivan Nikulin <ifaaan@gmail.com>"]
 license = "Apache-2.0"
 description = "BoringSSL bindings"
 repository = "https://github.com/inikulin/boring"
+documentation = "https://docs.rs/boring"
 readme = "README.md"
 keywords = ["crypto", "tls", "ssl", "dtls"]
 categories = ["cryptography", "api-bindings"]
@@ -14,7 +15,7 @@ bitflags = "1.0"
 foreign-types = "0.3.1"
 lazy_static = "1"
 libc = "0.2"
-boring-sys = { version = "1.0.0", path = "../boring-sys" }
+boring-sys = { version = "1.0.1", path = "../boring-sys" }
 
 [dev-dependencies]
 tempdir = "0.3"
