--- a/hyper-boring/Cargo.toml
+++ b/hyper-boring/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "hyper-boring"
-version = "1.0.0"
+version = "1.0.1"
 authors = ["Steven Fackler <sfackler@gmail.com>", "Ivan Nikulin <ifaaan@gmail.com>"]
 edition = "2018"
 description = "Hyper TLS support via BoringSSL"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/sfackler/hyper-boring"
+documentation = "https://docs.rs/hyper-boring"
 readme = "README.md"
 exclude = ["test/*"]
 
@@ -21,10 +22,10 @@ http = "0.2"
 hyper = { version = "0.13", default-features = false }
 linked_hash_set = "0.1"
 once_cell = "1.0"
-boring = { version = "1.0.0", path = "../boring" }
-boring-sys = { version = "1.0.0", path = "../boring-sys" }
+boring = { version = "1.0.1", path = "../boring" }
+boring-sys = { version = "1.0.1", path = "../boring-sys" }
 tokio = "0.2"
-tokio-boring = { version = "1.0.0", path = "../tokio-boring" }
+tokio-boring = { version = "1.0.1", path = "../tokio-boring" }
 tower-layer = "0.3"
 
 [dev-dependencies]
