--- a/boring-sys/Cargo.toml
+++ b/boring-sys/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "boring-sys"
-version = "1.0.1"
+version = "1.0.2"
 authors = ["Alex Crichton <alex@alexcrichton.com>",
            "Steven Fackler <sfackler@gmail.com>",
            "Ivan Nikulin <ifaaan@gmail.com>"]
@@ -8,6 +8,7 @@ license = "MIT"
 description = "FFI bindings to BoringSSL"
 repository = "https://github.com/inikulin/boring"
 documentation = "https://docs.rs/boring-sys"
+links = "boringssl"
 readme = "README.md"
 categories = ["cryptography", "external-ffi-bindings"]
 include = [
