--- a/hyper-boring/Cargo.toml
+++ b/hyper-boring/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Steven Fackler <sfackler@gmail.com>", "Ivan Nikulin <ifaaan@gmail.co
 edition = "2018"
 description = "Hyper TLS support via BoringSSL"
 license = "MIT/Apache-2.0"
-repository = "https://github.com/sfackler/hyper-boring"
+repository = "https://github.com/cloudflare/boring"
 documentation = "https://docs.rs/hyper-boring"
 readme = "README.md"
 exclude = ["test/*"]
