--- a/boring-sys/Cargo.toml
+++ b/boring-sys/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Alex Crichton <alex@alexcrichton.com>",
            "Ivan Nikulin <ifaaan@gmail.com>"]
 license = "MIT"
 description = "FFI bindings to BoringSSL"
-repository = "https://github.com/inikulin/boring"
+repository = "https://github.com/cloudflare/boring"
 documentation = "https://docs.rs/boring-sys"
 links = "boringssl"
 readme = "README.md"
