--- a/tokio-boring/Cargo.toml
+++ b/tokio-boring/Cargo.toml
@@ -4,8 +4,8 @@ version = "1.0.2"
 authors = ["Alex Crichton <alex@alexcrichton.com>", "Ivan Nikulin <ifaaan@gmail.com>"]
 license = "MIT/Apache-2.0"
 edition = "2018"
-repository = "https://github.com/inikulin/boring"
-homepage = "https://github.com/inikulin/boring"
+repository = "https://github.com/cloudflare/boring"
+homepage = "https://github.com/cloudflare/boring"
 documentation = "https://docs.rs/tokio-boring"
 description = """
 An implementation of SSL streams for Tokio backed by BoringSSL
