Include .asm files required for Windows

--- a/boring-sys/Cargo.toml
+++ b/boring-sys/Cargo.toml
@@ -16,6 +16,7 @@ include = [
     "/*.toml",
     "/LICENSE-MIT",
     "/deps/boringssl/**/*.[chS]",
+    "/deps/boringssl/**/*.asm",
     "/deps/boringssl/src/**/*.cc",
     "/deps/boringssl/**/CMakeLists.txt",
     "/deps/boringssl/**/sources.cmake",
