--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,7 +124,7 @@ jobs:
           os: ubuntu-latest
         - thing: i686-msvc
           target: i686-pc-windows-msvc
-          rust: stable-i686-msvc
+          rust: stable-x86_64-msvc
           os: windows-latest
         - thing: x86_64-msvc
           target: x86_64-pc-windows-msvc
@@ -143,6 +143,15 @@ jobs:
       if: startsWith(matrix.os, 'windows')
       run: choco install nasm
       shell: cmd
+    - name: Install LLVM and Clang
+      if: startsWith(matrix.os, 'windows')
+      uses: KyleMayes/install-llvm-action@v1
+      with:
+        version: "11.0"
+        directory: ${{ runner.temp }}/llvm
+    - name: Set LIBCLANG_PATH
+      if: startsWith(matrix.os, 'windows')
+      run: echo "LIBCLANG_PATH=$((gcm clang).source -replace "clang.exe")" >> $env:GITHUB_ENV
     - if: startsWith(matrix.os, 'windows')
       # CI's Windows doesn't have require root certs
       run: cargo test --workspace --exclude tokio-boring --exclude hyper-boring
