--- a/hyper-boring/Cargo.toml
+++ b/hyper-boring/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hyper-boring"
-version = "1.0.4"
+version = "2.0.0"
 authors = ["Steven Fackler <sfackler@gmail.com>", "Ivan Nikulin <ifaaan@gmail.com>"]
 edition = "2018"
 description = "Hyper TLS support via BoringSSL"
@@ -19,16 +19,16 @@ runtime = ["hyper/runtime"]
 antidote = "1.0.0"
 bytes = "0.5"
 http = "0.2"
-hyper = { version = "0.13", default-features = false }
+hyper = { version = "0.14", default-features = false, features = ["client"] }
 linked_hash_set = "0.1"
 once_cell = "1.0"
 boring = { version = "1.0.2", path = "../boring" }
 boring-sys = { version = "1.0.2", path = "../boring-sys" }
-tokio = "0.2"
-tokio-boring = { version = "1.0.2", path = "../tokio-boring" }
+tokio = "1"
+tokio-boring = { version = "2", path = "../tokio-boring" }
 tower-layer = "0.3"
 
 [dev-dependencies]
-hyper = "0.13"
-tokio = { version = "0.2", features = ["full"] }
+hyper = { version = "0.14", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
 futures = "0.3"
