--- a/boring/Cargo.toml
+++ b/boring/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "boring"
 version = "1.0.3"
-authors = ["Steven Fackler <sfackler@gmail.com>", "Ivan Nikulin <ifaaan@gmail.com>"]
+authors = [
+    "Steven Fackler <sfackler@gmail.com>",
+    "Ivan Nikulin <ifaaan@gmail.com>"
+]
 license = "Apache-2.0"
 description = "BoringSSL bindings"
 repository = "https://github.com/cloudflare/boring"
@@ -11,6 +14,7 @@ keywords = ["crypto", "tls", "ssl", "dtls"]
 categories = ["cryptography", "api-bindings"]
 
 [dependencies]
+brotli = "3.3.0"
 bitflags = "1.0"
 foreign-types = "0.3.1"
 lazy_static = "1"
