Add fips-3678 feature

--- a/boring-sys/Cargo.toml
+++ b/boring-sys/Cargo.toml
@@ -29,3 +29,8 @@ include = [
 [build-dependencies]
 bindgen = "0.59"
 cmake = "0.1"
+
+[features]
+fips-3678 = ["fips"]
+# The "fips" feature is used for conditional-compilation that is common to all supported FIPS-validated versions
+fips = []
