--- a/hyper-boring/Cargo.toml
+++ b/hyper-boring/Cargo.toml
@@ -14,6 +14,7 @@ exclude = ["test/*"]
 default = ["runtime"]
 
 runtime = ["hyper/runtime"]
+fips-3678 = ["tokio-boring/fips-3678"]
 
 [dependencies]
 antidote = "1.0.0"
