--- a/tokio-boring/Cargo.toml
+++ b/tokio-boring/Cargo.toml
@@ -20,3 +20,6 @@ tokio = "1"
 futures = "0.3"
 tokio = { version = "1", features = ["full"] }
 anyhow = "1"
+
+[features]
+fips-3678 = ["boring/fips-3678"]
