--- a/boring/Cargo.toml
+++ b/boring/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "boring"
-version = "1.1.6"
+version = "2.0.0"
 authors = ["Steven Fackler <sfackler@gmail.com>", "Ivan Nikulin <ifaaan@gmail.com>"]
 license = "Apache-2.0"
 description = "BoringSSL bindings"
@@ -16,7 +16,7 @@ bitflags = "1.0"
 foreign-types = "0.5"
 lazy_static = "1"
 libc = "0.2"
-boring-sys = { version = "1.1.0", path = "../boring-sys" }
+boring-sys = { version = ">=1.1.0,<3.0.0", path = "../boring-sys" }
 
 [dev-dependencies]
 hex = "0.4"
