ci: Move comments about test modes
I think they belong in the new place, explaining why a particular
test-mode is chosed for a target.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,6 +140,8 @@ jobs:
           rust: stable
           os: ubuntu-latest
           test-type: run
+        # CI's Windows doesn't have required root certs,
+        # breaking tokio-boring and hyper-boring tests.
         - thing: i686-msvc
           target: i686-pc-windows-msvc
           rust: stable-x86_64-msvc
@@ -173,7 +175,6 @@ jobs:
       if: startsWith(matrix.os, 'windows')
       run: echo "LIBCLANG_PATH=$((gcm clang).source -replace "clang.exe")" >> $env:GITHUB_ENV
     - if: matrix.test-type == 'run-without-hyper'
-      # CI's Windows doesn't have require root certs
       run: cargo test --target ${{ matrix.target }} --workspace --exclude tokio-boring --exclude hyper-boring
       name: Run tests (Windows)
     - if: matrix.test-type == 'run'
