Remove `fips-3678` feature
Now that build.rs checks out the appropriate commit automatically,
there's not a strong need to have the version number itself in the feature.
We can always add multiple features in the future if we support more than one FIPS-validated version.

--- a/boring-sys/Cargo.toml
+++ b/boring-sys/Cargo.toml
@@ -31,6 +31,5 @@ bindgen = "0.59"
 cmake = "0.1"
 
 [features]
-fips-3678 = ["fips"]
-# The "fips" feature is used for conditional-compilation that is common to all supported FIPS-validated versions
+# Use a FIPS-validated version of boringssl.
 fips = []
