--- a/boring/Cargo.toml
+++ b/boring/Cargo.toml
@@ -23,6 +23,5 @@ hex = "0.4"
 rusty-hook = "^0.11"
 
 [features]
-fips-3678 = ["fips", "boring-sys/fips-3678"]
-# The "fips" feature is used for conditional-compilation that is common to all supported FIPS-validated versions
+# Use a FIPS-validated version of boringssl.
 fips = ["boring-sys/fips"]
