--- a/tokio-boring/Cargo.toml
+++ b/tokio-boring/Cargo.toml
@@ -22,4 +22,4 @@ tokio = { version = "1", features = ["full"] }
 anyhow = "1"
 
 [features]
-fips-3678 = ["boring/fips-3678"]
+fips = ["boring/fips"]
