Some final FIPS fixes
These weren't caught until PR CI ran.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -170,5 +170,7 @@ jobs:
     - name: Install Rust (rustup)
       run: rustup update stable --no-self-update && rustup default stable
       shell: bash
+    - name: Install Clang-7
+      run: sudo apt-get install -y clang-7
     - run: cargo test --features fips
       name: Run tests
