--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,18 +96,22 @@ jobs:
           target: arm-linux-androideabi
           rust: stable
           os: ubuntu-latest
+          check_only: true
         - thing: arm64-android
           target: aarch64-linux-android
           rust: stable
           os: ubuntu-latest
+          check_only: true
         - thing: i686-android
           target: i686-linux-android
           rust: stable
           os: ubuntu-latest
+          check_only: true
         - thing: x86_64-android
           target: x86_64-linux-android
           rust: stable
           os: ubuntu-latest
+          check_only: true
         - thing: aarch64-ios
           target: aarch64-apple-ios
           os: macos-latest
@@ -126,14 +130,19 @@ jobs:
           target: i686-unknown-linux-gnu
           rust: stable
           os: ubuntu-latest
+          apt_packages: gcc-multilib g++-multilib
         - thing: arm-linux
           target: arm-unknown-linux-gnueabi
           rust: stable
           os: ubuntu-latest
+          apt_packages: gcc-arm-linux-gnueabi g++-arm-linux-gnueabi
+          check_only: true
         - thing: aarch64-linux
           target: aarch64-unknown-linux-gnu
           rust: stable
           os: ubuntu-latest
+          apt_packages: crossbuild-essential-arm64
+          check_only: true
         - thing: x86_64-musl
           target: x86_64-unknown-linux-musl
           rust: stable
@@ -163,7 +172,7 @@ jobs:
       run: rustup update ${{ matrix.rust }} --no-self-update && rustup default ${{ matrix.rust }}
       shell: bash
     - run: rustup target add ${{ matrix.target }}
-    - name: Install Linux cross-compile dependencies
+    - name: Install target-specific APT dependencies
       if: "matrix.apt_packages != ''"
       run: sudo apt update && sudo apt install -y ${{ matrix.apt_packages }}
       shell: bash
