Switch check to --tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -198,7 +198,7 @@ jobs:
       run: cargo test --target ${{ matrix.target }} ${{ matrix.extra_test_args }}
       name: Run tests
     - if: matrix.check_only
-      run: cargo check --target ${{ matrix.target }} --all-targets
+      run: cargo check --target ${{ matrix.target }} --tests
       name: Check tests
     - name: Test boring-sys cargo publish
       # Running `cargo publish --dry-run` tests two things:
