Install Ninja build system for CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,6 +151,8 @@ jobs:
       run: rustup update ${{ matrix.rust }} --no-self-update && rustup default ${{ matrix.rust }}
       shell: bash
     - run: rustup target add ${{ matrix.target }}
+    - name: Install Ninja
+      uses: seanmiddleditch/gha-setup-ninja@v3
     - name: Install nasm
       if: startsWith(matrix.os, 'windows')
       run: choco install nasm
