--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,11 @@ on:
   pull_request:
     branches:
       - master
+      - libsignal
   push:
     branches:
       - master
+      - libsignal
 
 env:
   RUSTFLAGS: -Dwarnings
