--- a/hyper-boring/Cargo.toml
+++ b/hyper-boring/Cargo.toml
@@ -2,7 +2,7 @@
 name = "hyper-boring"
 version = "2.1.2"
 authors = ["Steven Fackler <sfackler@gmail.com>", "Ivan Nikulin <ifaaan@gmail.com>"]
-edition = "2018"
+edition = "2021"
 description = "Hyper TLS support via BoringSSL"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/cloudflare/boring"
@@ -14,7 +14,16 @@ exclude = ["test/*"]
 default = ["runtime"]
 
 runtime = ["hyper/runtime"]
+
+# Use a FIPS-validated version of boringssl.
 fips = ["tokio-boring/fips"]
+
+# Enables Raw public key API (https://datatracker.ietf.org/doc/html/rfc7250)
+rpk = ["tokio-boring/rpk"]
+
+# Enables post-quantum crypto (https://blog.cloudflare.com/post-quantum-for-all/)
+post-quantum = ["tokio-boring/post-quantum"]
+
 
 [dependencies]
 antidote = "1.0.0"
