--- a/tokio-boring/Cargo.toml
+++ b/tokio-boring/Cargo.toml
@@ -3,7 +3,7 @@ name = "tokio-boring"
 version = "2.1.5"
 authors = ["Alex Crichton <alex@alexcrichton.com>", "Ivan Nikulin <ifaaan@gmail.com>"]
 license = "MIT/Apache-2.0"
-edition = "2018"
+edition = "2021"
 repository = "https://github.com/cloudflare/boring"
 homepage = "https://github.com/cloudflare/boring"
 documentation = "https://docs.rs/tokio-boring"
@@ -22,4 +22,11 @@ tokio = { version = "1", features = ["full"] }
 anyhow = "1"
 
 [features]
+# Use a FIPS-validated version of boringssl.
 fips = ["boring/fips"]
+
+# Enables Raw public key API (https://datatracker.ietf.org/doc/html/rfc7250)
+rpk = ["boring/rpk"]
+
+# Enables post-quantum crypto (https://blog.cloudflare.com/post-quantum-for-all/)
+post-quantum = ["boring/post-quantum"]
