--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,32 @@ members = [
     "hyper-boring"
 ]
 resolver = "2"
+
+[workspace.package]
+version = "3.0.0"
+repository = "https://github.com/cloudflare/boring"
+edition = "2021"
+
+[workspace.dependencies]
+boring-sys = { version = "3.0", path = "./boring-sys" }
+boring = { version = "3.0", path = "./boring" }
+tokio-boring = { version = "3.0", path = "./tokio-boring" }
+
+bindgen = { version = "0.65.1", default-features = false, features = ["runtime"] }
+cmake = "0.1"
+fslock = "0.2"
+bitflags = "1.0"
+foreign-types = "0.5"
+lazy_static = "1"
+libc = "0.2"
+hex = "0.4"
+rusty-hook = "^0.11"
+futures = "0.3"
+tokio = { version = "1", features = ["full"] }
+anyhow = "1"
+antidote = "1.0.0"
+http = "0.2"
+hyper = { version = "0.14", default-features = false, features = ["full"] }
+linked_hash_set = "0.1"
+once_cell = "1.0"
+tower-layer = "0.3"
