--- a/tokio-boring/Cargo.toml
+++ b/tokio-boring/Cargo.toml
@@ -1,25 +1,19 @@
 [package]
 name = "tokio-boring"
-version = "2.1.5"
+version = { workspace = true }
 authors = ["Alex Crichton <alex@alexcrichton.com>", "Ivan Nikulin <ifaaan@gmail.com>"]
 license = "MIT/Apache-2.0"
-edition = "2021"
-repository = "https://github.com/cloudflare/boring"
+edition = { workspace = true }
+repository = { workspace = true }
 homepage = "https://github.com/cloudflare/boring"
 documentation = "https://docs.rs/tokio-boring"
 description = """
 An implementation of SSL streams for Tokio backed by BoringSSL
 """
 
-[dependencies]
-boring = { version = ">=1.1.0,<3.0.0", path = "../boring" }
-boring-sys = { version = ">=1.1.0,<3.0.0", path = "../boring-sys" }
-tokio = "1"
-
-[dev-dependencies]
-futures = "0.3"
-tokio = { version = "1", features = ["full"] }
-anyhow = "1"
+[package.metadata.docs.rs]
+features = ["rpk", "post-quantum"]
+rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
 # Use a FIPS-validated version of boringssl.
@@ -30,3 +24,14 @@ rpk = ["boring/rpk"]
 
 # Enables post-quantum crypto (https://blog.cloudflare.com/post-quantum-for-all/)
 post-quantum = ["boring/post-quantum"]
+
+[dependencies]
+boring = { workspace = true }
+boring-sys = { workspace = true }
+tokio = { workspace = true }
+
+[dev-dependencies]
+futures = { workspace = true }
+tokio = { workspace = true }
+anyhow = { workspace = true }
+
