--- a/hyper-boring/Cargo.toml
+++ b/hyper-boring/Cargo.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 exclude = ["test/*"]
 
 [package.metadata.docs.rs]
-features = ["rpk", "post-quantum"]
+features = ["rpk", "pq-experimental"]
 rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
@@ -25,8 +25,8 @@ fips = ["tokio-boring/fips"]
 # Enables Raw public key API (https://datatracker.ietf.org/doc/html/rfc7250)
 rpk = ["tokio-boring/rpk"]
 
-# Enables post-quantum crypto (https://blog.cloudflare.com/post-quantum-for-all/)
-post-quantum = ["tokio-boring/post-quantum"]
+# Enables experimental post-quantum crypto (https://blog.cloudflare.com/post-quantum-for-all/)
+pq-experimental = ["tokio-boring/pq-experimental"]
 
 
 [dependencies]
