--- a/boring-sys/Cargo.toml
+++ b/boring-sys/Cargo.toml
@@ -36,6 +36,9 @@ rustdoc-args = ["--cfg", "docsrs"]
 # Use a FIPS-validated version of boringssl.
 fips = []
 
+# Link with precompiled FIPS-validated `bcm.o` module.
+fips-link-precompiled = ["fips"]
+
 # Enables Raw public key API (https://datatracker.ietf.org/doc/html/rfc7250)
 rpk = []
 
