--- a/boring-sys/Cargo.toml
+++ b/boring-sys/Cargo.toml
@@ -22,6 +22,12 @@ include = [
     "/deps/boringssl/**/CMakeLists.txt",
     "/deps/boringssl/**/sources.cmake",
     "/deps/boringssl/LICENSE",
+    "/deps/boringssl-fips/**/*.[chS]",
+    "/deps/boringssl-fips/**/*.asm",
+    "/deps/boringssl-fips/src/**/*.cc",
+    "/deps/boringssl-fips/**/CMakeLists.txt",
+    "/deps/boringssl-fips/**/sources.cmake",
+    "/deps/boringssl/LICENSE",
     "/build.rs",
     "/src",
     "/patches",
