Reduce release bundle size by excluding PQ test data

--- a/boring-sys/Cargo.toml
+++ b/boring-sys/Cargo.toml
@@ -20,9 +20,9 @@ include = [
     "/deps/boringssl/**/*.asm",
     "/deps/boringssl/**/*.json",
     "/deps/boringssl/**/*.num",
-    "/deps/boringssl/**/*.txt",
+    "/deps/boringssl/**/objects.txt",
     "/deps/boringssl/**/*.bzl",
-    "/deps/boringssl/**/*.cc",
+    "/deps/boringssl/src/**/*.cc",
     "/deps/boringssl/**/CMakeLists.txt",
     "/deps/boringssl/**/sources.cmake",
     "/deps/boringssl/LICENSE",
@@ -30,9 +30,9 @@ include = [
     "/deps/boringssl-fips/**/*.asm",
     "/deps/boringssl/**/*.json",
     "/deps/boringssl/**/*.num",
-    "/deps/boringssl/**/*.txt",
+    "/deps/boringssl/**/objects.txt",
     "/deps/boringssl-fips/**/*.bzl",
-    "/deps/boringssl-fips/**/*.cc",
+    "/deps/boringssl-fips/src/**/*.cc",
     "/deps/boringssl-fips/**/CMakeLists.txt",
     "/deps/boringssl-fips/**/sources.cmake",
     "/deps/boringssl/LICENSE",
