Reduce release bundle size by excluding PQ test data

--- a/boring-sys/Cargo.toml
+++ b/boring-sys/Cargo.toml
@@ -18,9 +18,9 @@ include = [
     "/LICENSE-MIT",
     "/deps/boringssl/**/*.[chS]",
     "/deps/boringssl/**/*.asm",
-    "/deps/boringssl/**/*.json",
-    "/deps/boringssl/**/*.num",
-    "/deps/boringssl/**/objects.txt",
+    "/deps/boringssl/sources.json",
+    "/deps/boringssl/src/crypto/obj/obj_mac.num",
+    "/deps/boringssl/src/crypto/obj/objects.txt",
     "/deps/boringssl/**/*.bzl",
     "/deps/boringssl/src/**/*.cc",
     "/deps/boringssl/**/CMakeLists.txt",
@@ -28,9 +28,9 @@ include = [
     "/deps/boringssl/LICENSE",
     "/deps/boringssl-fips/**/*.[chS]",
     "/deps/boringssl-fips/**/*.asm",
-    "/deps/boringssl/**/*.json",
-    "/deps/boringssl/**/*.num",
-    "/deps/boringssl/**/objects.txt",
+    "/deps/boringssl/sources.json",
+    "/deps/boringssl/src/crypto/obj/obj_mac.num",
+    "/deps/boringssl/src/crypto/obj/objects.txt",
     "/deps/boringssl-fips/**/*.bzl",
     "/deps/boringssl-fips/src/**/*.cc",
     "/deps/boringssl-fips/**/CMakeLists.txt",
