--- a/hyper-boring/Cargo.toml
+++ b/hyper-boring/Cargo.toml
@@ -19,11 +19,13 @@ default = ["runtime"]
 
 runtime = ["hyper/runtime"]
 
-# Use a FIPS-validated version of boringssl.
+# Use a FIPS-validated version of boringSSL in `deps/boringssl-fips`.
 fips = ["tokio-boring/fips"]
 
-# Link with precompiled FIPS-validated `bcm.o` module.
-fips-link-precompiled = ["fips", "tokio-boring/fips-link-precompiled"]
+# Use `deps/boringssl`, but replace the `bcm.o` module with a version provided
+# by the user. This allows the `bcm.o` module from the FIPS-validated build of
+# `libcrypto.a` to be used with a more recent version of boringSSL.
+fips-link-precompiled = ["tokio-boring/fips-link-precompiled"]
 
 # Enables Raw public key API (https://datatracker.ietf.org/doc/html/rfc7250)
 rpk = ["tokio-boring/rpk"]
