Specifically exclude large test data files
Rather than *including* only the files we believe are necessary to build
BoringSSL, this change adds an `exclude` section to the Cargo.toml to
explicitly exclude large test data files from the crates.io package.
I've verified that all the files excluded in this manner are okay to
exclude by manually deleting them from my local checkout and testing
that the build still works.

We may want to add automation for testing that this exclude
configuration is still okay when updating the BoringSSL revision, by
adding a shell script or something that deletes these files and tests
that we can build BoringSSL. This could run as part of the repo's CI
configuration.

--- a/boring-sys/Cargo.toml
+++ b/boring-sys/Cargo.toml
@@ -23,6 +23,22 @@ include = [
     "/src",
     "/patches",
 ]
+exclude = [
+    # Don't publish the entire Git repository to crates.io
+    "/deps/boringssl/.git",
+    "/deps/boringssl-fips/.git",
+    "/deps/boringssl/.github",
+    "/deps/boringssl-fips/.github",
+    # These test data files are quite large and doesn't need to be publisehd to
+    # crates.io, since BoringSSL still builds without them.
+    "/deps/boringssl/crypto_test_data.cc",
+    "/deps/boringssl/src/crypto/cipher_extra/test",
+    "/deps/boringssl-fips/crypto/cipher_extra/test",
+    "/deps/boringssl/**/*_test.txt",
+    "/deps/boringssl-fips/**/*_test.txt",
+    "/deps/boringssl/**/*_tests.txt",
+    "/deps/boringssl-fips/**/*_tests.txt",
+]
 
 [package.metadata.docs.rs]
 features = ["rpk", "pq-experimental"]
