add CI jobs to run `cargo package`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -177,6 +177,16 @@ jobs:
       run: cargo check --target ${{ matrix.target }} --all-targets
       name: Check tests (iOS)
 
+  package:
+    name: Test boring-sys package
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Rust
+        run: rustup update stable && rustup default stable
+      - name: Test boring-sys cargo package
+        run: cargo package -p boring-sys
+
   test-fips:
     name: Test FIPS integration
     runs-on: ubuntu-20.04
@@ -197,6 +207,8 @@ jobs:
       run: ln -s clang clang++-12
     - run: cargo test --features fips
       name: Run tests
+    - run: cargo package --features fips
+      name: Test boring-sys cargo package (FIPS)
 
   test-features:
     name: Test features
