Don't use self-signed certs in hyper-boring tests

--- a/hyper-boring/Cargo.toml
+++ b/hyper-boring/Cargo.toml
@@ -42,4 +42,5 @@ tower-layer = { workspace = true }
 [dev-dependencies]
 hyper = { workspace = true, features = [ "full" ] }
 tokio = { workspace = true, features = [ "full" ] }
+tower = { workspace = true, features = ["util"] }
 futures = { workspace = true }
