Tweak cliff config to exclude merge and release commits from changelog

--- a/hyper-boring/Cargo.toml
+++ b/hyper-boring/Cargo.toml
@@ -44,3 +44,11 @@ hyper = { workspace = true, features = [ "full" ] }
 tokio = { workspace = true, features = [ "full" ] }
 tower = { workspace = true, features = ["util"] }
 futures = { workspace = true }
+
+[package.metadata.release]
+pre-release-hook = [
+  "git-cliff",
+  "--workdir", "..",
+  "-o", "../RELEASE_NOTES",
+  "--tag", "{{version}}"
+]
