Expose API to enable certificate compression.

--- a/boring/Cargo.toml
+++ b/boring/Cargo.toml
@@ -81,3 +81,4 @@ boring-sys = { workspace = true }
 [dev-dependencies]
 hex = { workspace = true }
 rusty-hook = { workspace = true }
+brotli = { workspace = true }
