CI: Adjust CI branch to "main" instead of "master" and "libsignal"

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,12 +3,10 @@ name: CI
 on:
   pull_request:
     branches:
-      - master
-      - libsignal
+      - main
   push:
     branches:
-      - master
-      - libsignal
+      - main
 
 env:
   RUSTFLAGS: -Dwarnings
