Skip bindgen 0.70's layout tests before Rust 1.77

--- a/boring-sys/Cargo.toml
+++ b/boring-sys/Cargo.toml
@@ -80,6 +80,7 @@ pq-experimental = []
 underscore-wildcards = []
 
 [build-dependencies]
+autocfg = { workspace = true }
 bindgen = { workspace = true }
 cmake = { workspace = true }
 fs_extra = { workspace = true }
