build: Fix the build for 32-bit Linux platform (#312)
build: Fix the build for 32-bit Linux platform

--- a/boring-sys/Cargo.toml
+++ b/boring-sys/Cargo.toml
@@ -19,6 +19,7 @@ include = [
     "/LICENSE-MIT",
     "/cmake/*.cmake",
     # boringssl (non-FIPS)
+    "/deps/boringssl/src/util/32-bit-toolchain.cmake",
     "/deps/boringssl/**/*.[chS]",
     "/deps/boringssl/**/*.asm",
     "/deps/boringssl/sources.json",
@@ -30,6 +31,7 @@ include = [
     "/deps/boringssl/**/sources.cmake",
     "/deps/boringssl/LICENSE",
     # boringssl (FIPS)
+    "/deps/boringssl-fips/src/util/32-bit-toolchain.cmake",
     "/deps/boringssl-fips/**/*.[chS]",
     "/deps/boringssl-fips/**/*.asm",
     "/deps/boringssl-fips/**/*.pl",
